tests/NormalTests/paczka1/small_fuzzy/67736899.err
Error in line 2: S347 S96 32,9
Error in line 4: hUwsSQUv0M5 S481 20,62
Error in line 3: S347 S481 75,4
Error in line 8: S347 S589 78,4
